[package]
name = "youtube-content-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking","json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
image = "0.24.4"
imageproc = "0.23.0"
rusttype = "0.9.2"
tweet = "0.3.0"
rand = "0.8.5"
base64 = "0.13.0"
urlencoding = "2.1.2"